加入蜂鸣器模块，修改md文件(jason)

--- a/_locales/zh/sensors-strings.json
+++ b/_locales/zh/sensors-strings.json
@@ -7,6 +7,7 @@
     "barb_fitting.JOYSTICK_BUTTON_RIGHT|block": "右摇杆按键",
     "joystick.Gamepad_button|block": "游戏手柄按键 %BUTS 是否被按下",
     "joystick.Gamepad_shock|block": "游戏手柄震动频率 %shock ",
+    "joystick.actuator_buzzer1|block": "游戏手柄板载蜂鸣器振动频率 %shock ",
     
     
     "key_status.PRESS_DOWN|block": "按下",
