--- a/_locales/zh/sensors-strings.json
+++ b/_locales/zh/sensors-strings.json
@@ -1,8 +1,8 @@
 {
     "joystick|block": "Joystick:bit",
     "joystick.Gamepad_Press|block": "游戏手柄按键 %button 是否被按下？",
-    "barb_fitting.BUTOON_LEFT|block": "L",
-    "barb_fitting.BUTOON_RIGHT|block": "R",
+    "barb_fitting.JOYSTICK_BUTOON_LEFT|block": "L",
+    "barb_fitting.JOYSTICK_BUTOON_RIGHT|block": "R",
     "barb_fitting.JOYSTICK_BUTTON_LEFT|block": "左摇杆按键",
     "barb_fitting.JOYSTICK_BUTTON_RIGHT|block": "右摇杆按键",
     "joystick.Gamepad_button|block": "游戏手柄按键 %BUTS 是否被按下",
@@ -10,18 +10,18 @@
     "joystick.actuator_buzzer1|block": "游戏手柄板载蜂鸣器振动频率 %shock ",
     
     
-    "key_status.PRESS_DOWN|block": "按下",
-    "key_status.PRESS_UP|block": "释放",
+    "key_status.JOYSTICK_PRESS_DOWN|block": "按下",
+    "key_status.JOYSTICK_PRESS_UP|block": "释放",
     "key_status.SINGLE_CLICK|block": "单击",
     "key_status.DOUBLE_CLICK|block": "双击",
     "key_status.LONG_PRESS_HOLD|block": "长按",
     "key_status.NONE_PRESS|block": "未按",
     "joystick.Gamepad_Release|block": "游戏手柄按键 %button 是否被释放？",
     "joystick.Gamepad_Shaft|block": "游戏手柄获取 %axial 的值",
-    "Shaft.X_Shaft|block": "X轴",
-    "Shaft.Y_Shaft|block": "Y轴",
+    "Shaft.JOYSTICK_X_Shaft|block": "X轴",
+    "Shaft.JOYSTICK_Y_Shaft|block": "Y轴",
     "joystick.Gamepad_Status|block": "按键 %button 是否是 %status 状态",
     "joystick.Gamepad_Wiggly|block": "游戏手柄摇杆获取 %rock %axial 的值",
-    "Wiggly.left_wi|block": "左侧",
-    "Wiggly.right_wi|block": "右侧"
+    "Wiggly.JOYSTICK_left_wi|block": "左侧",
+    "Wiggly.JOYSTICK_right_wi|block": "右侧"
 }
