修改手柄状态

--- a/_locales/zh/joystick-strings.json
+++ b/_locales/zh/joystick-strings.json
@@ -8,13 +8,12 @@
     "joystick.Gamepad_shock|block": "游戏手柄震动电机速度 %shock ",
     "joystick.actuator_buzzer1|block": "游戏手柄板载蜂鸣器振动频率(HZ) %shock ",
     
-    
-    "key_status.JOYSTICK_PRESS_DOWN|block": "按下",
-    "key_status.JOYSTICK_PRESS_UP|block": "释放",
-    "key_status.SINGLE_CLICK|block": "单击",
-    "key_status.DOUBLE_CLICK|block": "双击",
-    "key_status.LONG_PRESS_HOLD|block": "长按",
-    "key_status.NONE_PRESS|block": "未按",
+    "joystick_key_status.JOYSTICK_PRESS_DOWN|block": "按下",
+    "joystick_key_status.JOYSTICK_PRESS_UP|block": "释放",
+    "joystick_key_status.JOYSTICK_SINGLE_CLICK|block": "单击",
+    "joystick_key_status.JOYSTICK_DOUBLE_CLICK|block": "双击",
+    "joystick_key_status.JOYSTICK_LONG_PRESS_HOLD|block": "长按",
+    "joystick_key_status.NONE_PRESS|block": "未按",
     "Shaft.JOYSTICK_X_Shaft|block": "X轴",
     "Shaft.JOYSTICK_Y_Shaft|block": "Y轴",
     "joystick.Gamepad_Status|block": "当按钮 %button 被 %status 时",
